[package]
name = "nihav"
version = "0.1.0"
authors = ["Kostya Shishkov <kostya.shishkov@gmail.com>"]

[dependencies]
bitflags = "0.5.0"

[features]
default = ["all_decoders", "all_demuxers"]
demuxers = []
all_demuxers = ["demuxer_avi", "demuxer_gdv"]
demuxer_avi = ["demuxers"]
demuxer_gdv = ["demuxers"]

decoders = []
h263 = []

dsp = []
fft = ["dsp"]
mdct = ["dsp"]
dsp_window = ["dsp"]

all_decoders = ["all_video_decoders", "all_audio_decoders"]

all_video_decoders = ["decoder_gdvvid", "decoder_indeo2", "decoder_indeo3", "decoder_intel263"]
decoder_gdvvid = ["decoders"]
decoder_indeo2 = ["decoders"]
decoder_indeo3 = ["decoders"]
decoder_intel263 = ["h263", "decoders"]

all_audio_decoders = ["decoder_pcm", "decoder_imc"]
decoder_pcm = ["decoders"]
decoder_imc = ["decoders", "fft", "dsp_window"]
