[package]
name = "nihav"
version = "0.1.0"
authors = ["Kostya Shishkov <kostya.shishkov@gmail.com>"]

[features]
default = ["all_decoders", "all_demuxers"]
demuxers = []
all_demuxers = ["demuxer_avi", "demuxer_gdv", "demuxer_real"]
demuxer_avi = ["demuxers"]
demuxer_gdv = ["demuxers"]
demuxer_real = ["demuxers"]

decoders = []
h263 = []

dsp = []
fft = ["dsp"]
mdct = ["fft", "dsp"]
dsp_window = ["dsp"]

all_decoders = ["all_video_decoders", "all_audio_decoders"]

all_video_decoders = ["decoder_clearvideo", "decoder_gdvvid", "decoder_indeo2", "decoder_indeo3", "decoder_indeo4", "decoder_indeo5", "decoder_intel263", "decoder_realvideo1", "decoder_realvideo2", "decoder_realvideo3", "decoder_realvideo4", "decoder_realvideo6"]
decoder_clearvideo = ["decoders"]
decoder_gdvvid = ["decoders"]
decoder_indeo2 = ["decoders"]
decoder_indeo3 = ["decoders"]
decoder_indeo4 = ["decoders"]
decoder_indeo5 = ["decoders"]
decoder_intel263 = ["h263", "decoders"]
decoder_realvideo1 = ["h263", "decoders"]
decoder_realvideo2 = ["h263", "decoders"]
decoder_realvideo3 = ["decoders"]
decoder_realvideo4 = ["decoders"]
decoder_realvideo6 = ["decoders"]

all_audio_decoders = ["decoder_pcm", "decoder_imc", "decoders_real"]
decoder_pcm = ["decoders"]
decoder_ts102366 = ["decoders", "fft"]
decoder_imc = ["decoders", "fft", "dsp_window"]
decoders_real = ["decoder_realaudio144", "decoder_realaudio288", "decoder_sipro", "decoder_ts102366", "decoder_cook", "decoder_atrac3", "decoder_aac", "decoder_ralf"]
decoder_realaudio144 = ["decoders"]
decoder_realaudio288 = ["decoders"]
decoder_sipro = ["decoders"]
decoder_cook = ["decoders", "fft", "mdct"]
decoder_atrac3 = ["decoders", "mdct"]
decoder_aac = ["decoders", "mdct", "dsp_window"]
decoder_ralf = ["decoders"]
