[package]
name = "nihav_commonfmt"
version = "0.1.0"
authors = ["Kostya Shishkov <kostya.shishkov@gmail.com>"]
edition = "2018"

[dependencies.nihav_core]
path = "../nihav-core"

[dependencies.nihav_registry]
path = "../nihav-registry"

[dependencies.nihav_codec_support]
path = "../nihav-codec-support"
features = ["h263", "mdct", "fft", "dsp_window", "vq"]

[dev-dependencies]
nihav_realmedia = { path = "../nihav-realmedia", default-features=false, features = ["all_demuxers"] }

[features]
default = ["all_decoders", "all_demuxers", "all_encoders", "all_muxers"]
decoders = []
demuxers = []
encoders = []
muxers = []
all_demuxers = ["demuxer_avi", "demuxer_mov", "demuxer_wav"]
demuxer_avi = ["demuxers"]
demuxer_mov = ["demuxers"]
demuxer_wav = ["demuxers"]
all_muxers = ["muxer_avi", "muxer_wav"]
muxer_avi = ["muxers"]
muxer_wav = ["muxers"]

all_decoders = ["all_video_decoders", "all_audio_decoders"]

all_video_decoders = ["decoder_cinepak", "decoder_clearvideo", "decoder_zmbv"]
decoder_cinepak = ["decoders"]
decoder_clearvideo = ["decoders"]
decoder_zmbv = ["decoders"]

all_audio_decoders = ["decoder_pcm", "decoder_ts102366", "decoder_sipro", "decoder_atrac3", "decoder_aac"]
decoder_pcm = ["decoders"]
decoder_ts102366 = ["decoders"]
decoder_sipro = ["decoders"]
decoder_atrac3 = ["decoders"]
decoder_aac = ["decoders"]

all_encoders = ["all_video_encoders", "all_audio_encoders"]

all_video_encoders = ["encoder_cinepak", "encoder_zmbv"]
encoder_cinepak = ["encoders"]
encoder_zmbv = ["encoders"]

all_audio_encoders = ["encoder_pcm"]
encoder_pcm = ["encoders"]
