[package]
name = "nihav_core"
version = "0.1.0"
authors = ["Kostya Shishkov <kostya.shishkov@gmail.com>"]
edition = "2018"

[features]
default = ["decoders", "demuxers"]

decoders = []
demuxers = []

blockdsp = []
h263 = ["blockdsp"]

dsp = []
dct = ["dsp"]
fft = ["dsp"]
mdct = ["fft", "dsp"]
dsp_window = ["dsp"]
