[package]
name = "nihav_game"
version = "0.1.0"
authors = ["Kostya Shishkov <kostya.shishkov@gmail.com>"]
edition = "2018"

[dependencies.nihav_core]
path = "../nihav-core"
features = []

[dev-dependencies]
nihav_commonfmt = { path = "../nihav-commonfmt" }

[features]
default = ["all_decoders", "all_demuxers"]
demuxers = []
all_demuxers = ["demuxer_bmv", "demuxer_bmv3", "demuxer_gdv", "demuxer_vmd"]
demuxer_bmv = ["demuxers"]
demuxer_bmv3 = ["demuxers"]
demuxer_gdv = ["demuxers"]
demuxer_vmd = ["demuxers"]

all_decoders = ["all_video_decoders", "all_audio_decoders"]
decoders = []

all_video_decoders = ["decoder_bmv", "decoder_bmv3", "decoder_gdvvid", "decoder_midivid", "decoder_vmd"]
decoder_bmv = ["decoders"]
decoder_bmv3 = ["decoders"]
decoder_gdvvid = ["decoders"]
decoder_midivid = ["decoders"]
decoder_vmd = ["decoders"]

all_audio_decoders = []
