[package]
name = "nihav_indeo"
version = "0.1.0"
authors = ["Kostya Shishkov <kostya.shishkov@gmail.com>"]
edition = "2018"

[dependencies.nihav_core]
path = "../nihav-core"
features = ["h263", "fft", "dsp_window"]

[dev-dependencies]
nihav_commonfmt = { path = "../nihav-commonfmt" }

[features]
default = ["all_decoders"]

all_decoders = ["decoder_imc", "decoder_indeo2", "decoder_indeo3", "decoder_indeo4", "decoder_indeo5", "decoder_intel263"]
decoders = []

decoder_imc = ["decoders"]
decoder_indeo2 = ["decoders"]
decoder_indeo3 = ["decoders"]
decoder_indeo4 = ["decoders"]
decoder_indeo5 = ["decoders"]
decoder_intel263 = ["decoders"]
