[package]
name = "nihav_itu"
version = "0.1.0"
authors = ["Kostya Shishkov <kostya.shishkov@gmail.com>"]
edition = "2018"

[dependencies.nihav_core]
path = "../nihav-core"

[dependencies.nihav_codec_support]
path = "../nihav-codec-support"

[dev-dependencies]
nihav_commonfmt = { path = "../nihav-commonfmt" }

[features]
default = ["all_decoders"]

all_decoders = ["all_video_decoders"]
decoders = []

all_video_decoders = ["decoder_h264"]
decoder_h264 = ["decoders"]
