[package]
name = "nihav_vivo"
version = "0.1.0"
authors = ["Kostya Shishkov <kostya.shishkov@gmail.com>"]
edition = "2018"

[dependencies.nihav_core]
path = "../nihav-core"

[dependencies.nihav_codec_support]
path = "../nihav-codec-support"
features = ["dsp_window", "mdct", "dct", "h263"]

[features]
default = ["all_decoders", "demuxer_vivo"]

all_decoders = ["decoder_vivo1", "decoder_vivo2", "decoder_siren", "decoder_g723_1"]
decoders = []

decoder_vivo1 = ["decoders"]
decoder_vivo2 = ["decoders"]
decoder_g723_1 = ["decoders"]
decoder_siren = ["decoders"]

demuxer_vivo = []
